--- a/pom.xml
+++ b/pom.xml
@@ -75,8 +75,9 @@
     <jstl.version>1.2</jstl.version>
     <log4j.version>1.2.17</log4j.version>
     <fastjson.version>1.2.35</fastjson.version>
+    <jackson.version>2.7.4</jackson.version>
     <slf4j.version>1.7.25</slf4j.version>
-    <jackson.version>1.9.13</jackson.version>
+
     <commons-fileupload.version>1.3.3</commons-fileupload.version>
     <commons-io.version>2.5</commons-io.version>
     <commons-codec.version>1.10</commons-codec.version>
@@ -197,22 +198,32 @@
       <version>1.1.8</version>
     </dependency>
 
+
+
+
     <dependency>
       <groupId>org.slf4j</groupId>
       <artifactId>slf4j-log4j12</artifactId>
       <version>${slf4j.version}</version>
     </dependency>
+
+
+
     <!-- json和bean之间相互转换 -->
+
     <dependency>
-      <groupId>org.codehaus.jackson</groupId>
-      <artifactId>jackson-core-asl</artifactId>
+      <groupId>com.fasterxml.jackson.core</groupId>
+      <artifactId>jackson-core</artifactId>
       <version>${jackson.version}</version>
     </dependency>
+
+
     <dependency>
-      <groupId>org.codehaus.jackson</groupId>
-      <artifactId>jackson-mapper-asl</artifactId>
+      <groupId>com.fasterxml.jackson.core</groupId>
+      <artifactId>jackson-databind</artifactId>
       <version>${jackson.version}</version>
     </dependency>
+
     <!-- 上传组件包 -->
     <dependency>
       <groupId>commons-fileupload</groupId>
